# libidx

./: .travis.yml  LICENSE  Makefile  README.rst  meson.build  run_tests.py
examples/: validate.c
include/: idx.h
src/: idx.c
test/: __init__.py  _bindings.py  _helpers.py  test_bound.py  test_error_string.py  test_size.py  test_type.py  test_validate.py
tests/: idx_test.h
tests/idx_bound/: test_unexpected_dim_1d.c
tests/idx_error_string/: test_known.c  test_unknown.c
tests/idx_get_double/: test_max_neg_normal_0d.c  test_max_neg_subnormal_0d.c  test_max_pos_0d.c  test_max_pos_subnormal_0d.c  test_min_neg_0d.c  test_min_neg_subnormal_0d.c  test_min_pos_normal_0d.c  test_min_pos_subnormal_0d.c  test_neg_inf_0d.c  test_neg_one_0d.c  test_neg_zero_0d.c  test_pos_inf_0d.c  test_pos_one_0d.c  test_pos_zero_0d.c  test_qnan_0d.c
tests/idx_get_float/: test_max_neg_normal_0d.c  test_max_neg_subnormal_0d.c  test_max_pos_0d.c  test_max_pos_subnormal_0d.c  test_min_neg_0d.c  test_min_neg_subnormal_0d.c  test_min_pos_normal_0d.c  test_min_pos_subnormal_0d.c  test_neg_inf_0d.c  test_neg_one_0d.c  test_neg_zero_0d.c  test_pos_inf_0d.c  test_pos_one_0d.c  test_pos_zero_0d.c  test_qnan_0d.c
tests/idx_get_int16/: test_empty_1d.c  test_empty_2d.c  test_invalid_ndims_0d.c  test_invalid_type_0d.c  test_large_1d.c  test_large_2d.c  test_max_0d.c  test_min_0d.c  test_neg_one_0d.c  test_pos_one_0d.c  test_small_2d.c  test_valid_0d.c  test_zero_0d.c
tests/idx_get_int32/: test_empty_1d.c  test_empty_2d.c  test_invalid_ndims_0d.c  test_invalid_type_0d.c  test_large_1d.c  test_large_2d.c  test_max_0d.c  test_min_0d.c  test_neg_one_0d.c  test_pos_one_0d.c  test_small_2d.c  test_valid_0d.c  test_zero_0d.c
tests/idx_get_int8/: test_empty_1d.c  test_empty_2d.c  test_invalid_ndims_0d.c  test_invalid_type_0d.c  test_large_1d.c  test_large_2d.c  test_max_0d.c  test_min_0d.c  test_neg_one_0d.c  test_pos_one_0d.c  test_small_2d.c  test_valid_0d.c  test_zero_0d.c
tests/idx_get_uint8/: test_empty_1d.c  test_empty_2d.c  test_invalid_ndims_0d.c  test_invalid_type_0d.c  test_large_1d.c  test_large_2d.c  test_small_2d.c  test_valid_0d.c
tests/idx_init/: test_double_0d.c  test_double_3d.c  test_float_0d.c  test_float_3d.c  test_int16_0d.c  test_int16_3d.c  test_int32_0d.c  test_int32_3d.c  test_int8_0d.c  test_int8_3d.c  test_uint8_0d.c  test_uint8_3d.c  test_unsupported_types.c
tests/idx_set_double/: test_max_neg_normal_0d.c  test_max_neg_subnormal_0d.c  test_max_pos_0d.c  test_max_pos_subnormal_0d.c  test_min_neg_0d.c  test_min_neg_subnormal_0d.c  test_min_pos_normal_0d.c  test_min_pos_subnormal_0d.c  test_neg_inf_0d.c  test_neg_one_0d.c  test_neg_zero_0d.c  test_pos_inf_0d.c  test_pos_one_0d.c  test_pos_zero_0d.c  test_qnan_0d.c
tests/idx_set_float/: test_max_neg_normal_0d.c  test_max_neg_subnormal_0d.c  test_max_pos_0d.c  test_max_pos_subnormal_0d.c  test_min_neg_0d.c  test_min_neg_subnormal_0d.c  test_min_pos_normal_0d.c  test_min_pos_subnormal_0d.c  test_neg_inf_0d.c  test_neg_one_0d.c  test_neg_zero_0d.c  test_pos_inf_0d.c  test_pos_one_0d.c  test_pos_zero_0d.c  test_qnan_0d.c
tests/idx_set_int16/: test_almost_min_0d.c  test_empty_1d.c  test_invalid_ndims_0d.c  test_invalid_type_0d.c  test_max_0d.c  test_min_0d.c  test_neg_one_0d.c  test_pos_one_0d.c  test_small_2d.c  test_valid_0d.c  test_zero_0d.c
tests/idx_set_int32/: test_almost_min_0d.c  test_empty_1d.c  test_invalid_ndims_0d.c  test_invalid_type_0d.c  test_max_0d.c  test_min_0d.c  test_neg_one_0d.c  test_pos_one_0d.c  test_small_2d.c  test_valid_0d.c  test_zero_0d.c
tests/idx_size/: test_double_0d.c  test_float_0d.c  test_int16_0d.c  test_int32_0d.c  test_int8_0d.c  test_max_uint8.c  test_overflow_bounds_uint8.c  test_overflow_header_uint8.c  test_overflow_int16.c  test_overflow_uint8.c  test_too_many_dims.c  test_uint16_0d.c  test_uint8_0d.c  test_unsupported_0d.c
tests/idx_type/: test_all.c  test_double.c  test_float.c  test_int16.c  test_int32.c  test_int8.c  test_uint8.c  test_unknown.c
tests/idx_type_supported/: test_double.c  test_float.c  test_int16.c  test_int32.c  test_int8.c  test_uint8.c  test_unknown.c
tests/idx_validate/: test_bad_padding.c  test_overallocated_uint8.c  test_overflow_int16.c  test_overflow_uint8.c  test_too_short_for_bounds.c  test_too_short_for_data_1d.c  test_too_short_for_data_3d.c  test_too_short_for_header.c  test_uint8_0d.c  test_uint8_2d.c  test_unsupported_types.c
tests/integration/: test_roundtrip_int8_0d.c  test_roundtrip_pi_double.c  test_roundtrip_uint8_0d.c
