project('idx', 'c')

cc = meson.get_compiler('c')
dependencies = cc.find_library('m', required : false)

includes = include_directories('include')

### Library ###
lib_sources = [
  'src/idx.c',
]

lib = both_libraries(
  'idx', lib_sources,
  include_directories : includes,
  dependencies : dependencies,
  install : true,
)

### Tests ###
test_includes = include_directories('include', 'tests')

test_suites = {
  'idx_bound': [
    'unexpected_dim_1d',
  ],
  'idx_error_string': [
    'known',
    'unknown',
  ],
  'idx_get_uint8': [
    'valid_0d',
    'invalid_type_0d',
    'invalid_ndims_0d',
    'empty_1d',
    'large_1d',
    'empty_2d',
    'small_2d',
    'large_2d',
  ],
  'idx_get_int8': [
    'valid_0d',
    'invalid_type_0d',
    'invalid_ndims_0d',
    'empty_1d',
    'large_1d',
    'empty_2d',
    'small_2d',
    'large_2d',
    'zero_0d',
    'neg_one_0d',
    'pos_one_0d',
    'min_0d',
    'max_0d',
  ],
  'idx_set_int16': [
    'valid_0d',
    'invalid_type_0d',
    'invalid_ndims_0d',
    'empty_1d',
    'small_2d',
    'zero_0d',
    'neg_one_0d',
    'pos_one_0d',
    'almost_min_0d',
    'min_0d',
    'max_0d',
  ],
  'idx_get_int16': [
    'valid_0d',
    'invalid_type_0d',
    'invalid_ndims_0d',
    'empty_1d',
    'large_1d',
    'empty_2d',
    'small_2d',
    # 'large_2d',
    'zero_0d',
    'neg_one_0d',
    'pos_one_0d',
    'min_0d',
    'max_0d',
  ],
  'idx_set_int32': [
    'valid_0d',
    'invalid_type_0d',
    'invalid_ndims_0d',
    'empty_1d',
    'small_2d',
    'zero_0d',
    'neg_one_0d',
    'pos_one_0d',
    'almost_min_0d',
    'min_0d',
    'max_0d',
  ],
  'idx_get_int32': [
    'valid_0d',
    'invalid_type_0d',
    'invalid_ndims_0d',
    'empty_1d',
    'large_1d',
    'empty_2d',
    'small_2d',
    'large_2d',
    'zero_0d',
    'neg_one_0d',
    'pos_one_0d',
    'min_0d',
    'max_0d',
  ],
  'idx_set_float': [
    'pos_one_0d',
    'neg_one_0d',
    'pos_zero_0d',
    'neg_zero_0d',
    'max_pos_0d',
    'min_pos_normal_0d',
    'max_neg_normal_0d',
    'min_neg_0d',
    'max_pos_subnormal_0d',
    'min_pos_subnormal_0d',
    'max_neg_subnormal_0d',
    'min_neg_subnormal_0d',
    'pos_inf_0d',
    'neg_inf_0d',
  ],
  'idx_get_float': [
    'pos_one_0d',
    'neg_one_0d',
    'pos_zero_0d',
    'neg_zero_0d',
    'max_pos_0d',
    'min_pos_normal_0d',
    'max_neg_normal_0d',
    'min_neg_0d',
    'max_pos_subnormal_0d',
    'min_pos_subnormal_0d',
    'max_neg_subnormal_0d',
    'min_neg_subnormal_0d',
    'pos_inf_0d',
    'neg_inf_0d',
  ],
  'idx_set_double': [
    'pos_one_0d',
    'neg_one_0d',
    'pos_zero_0d',
    'neg_zero_0d',
    'max_pos_0d',
    'min_pos_normal_0d',
    'max_neg_normal_0d',
    'min_neg_0d',
    'max_pos_subnormal_0d',
    'min_pos_subnormal_0d',
    'max_neg_subnormal_0d',
    'min_neg_subnormal_0d',
    'pos_inf_0d',
    'neg_inf_0d',
  ],
  'idx_get_double': [
    'pos_one_0d',
    'neg_one_0d',
    'pos_zero_0d',
    'neg_zero_0d',
    'max_pos_0d',
    'min_pos_normal_0d',
    'max_neg_normal_0d',
    'min_neg_0d',
    'max_pos_subnormal_0d',
    'min_pos_subnormal_0d',
    'max_neg_subnormal_0d',
    'min_neg_subnormal_0d',
    'pos_inf_0d',
    'neg_inf_0d',
  ],
  'idx_init': [
    'double_0d',
    'float_0d',
    'int16_0d',
    'int32_0d',
    'int8_0d',
    'uint8_0d',
    'double_3d',
    'float_3d',
    'int16_3d',
    'int32_3d',
    'int8_3d',
    'uint8_3d',
    'unsupported_types',
  ],
  'idx_size': [
    'uint8_0d',
    'int8_0d',
    'int16_0d',
    'int32_0d',
    'float_0d',
    'double_0d',
    'max_uint8',
    'unsupported_0d',
    'overflow_uint8',
    'overflow_int16',
  ],
  'idx_type': [
    'double',
    'float',
    'int16',
    'int32',
    'int8',
    'uint8',
    'all',
  ],
  'idx_validate': [
    'uint8_0d',
    'uint8_2d',
    'too_short_for_header',
    'too_short_for_bounds',
    'too_short_for_data_1d',
    'too_short_for_data_3d',
    'overflow_uint8',
    'overflow_int16',
    'bad_padding',
  ],
  'idx_type_supported': [
    'double',
    'float',
    'int16',
    'int32',
    'int8',
    'uint8',
    'unknown',
  ],
  'integration': [
    'roundtrip_pi_double',
    'roundtrip_int8_0d',
    'roundtrip_uint8_0d',
  ],
}

foreach suite, tests : test_suites
  foreach test_name : tests
    test_exe = executable(
      'test-' + suite + '-' + test_name,
      'tests/' + suite + '/test_' + test_name + '.c',
      include_directories : test_includes,
      link_with : lib,
      install : false,
    )
    test(suite + ':' + test_name, test_exe, timeout: 120)
  endforeach
endforeach
